Fixed testing after update.