@@ -67,6 +67,9 @@ test {
 	}
 
 	environment "LOG_LEVEL", "debug"
+
+	// https://junit-pioneer.org/docs/environment-variables/#warnings-for-reflective-access
+	jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 jacocoTestReport {
